LPS-38395 Fix spacing on checkbox for tags and categories.

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
@@ -623,4 +623,8 @@
 	body.yui3-skin-sam .yui3-widget-mask {
 		@include opacity(0.8);
 	}
+
+	.portlet-asset-category-admin .vocabulary-item-check, .portlet-asset-tag-admin .tag-item-check {
+		margin: 0 5px 0 0;
+	}
 }
